tests/snapshots/yaml_suite_snapshots__yaml_suite_58MP_med.snap
---
source: tests/yaml_suite_snapshots.rs
expression: med
---
- name: Flow mapping edge cases
  from: "@ingydotnet"
  tags: edge flow mapping
  yaml: "{x: :x}\n"
  tree: "+STR\n +DOC\n  +MAP {}\n   =VAL :x\n   =VAL ::x\n  -MAP\n -DOC\n-STR\n"
  json: "{\n  \"x\": \":x\"\n}\n"
  dump: "x: :x\n"
